--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="manifest" href="manifest.json">
     <title>Basic PWA Example</title>
+    <script src="js/index.js"></script>
     <script src="js/aframe.min.js"></script>
 </head>
 <body>
