--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,7 +11,7 @@
     <script src="js/aframe.min.js"></script>
 </head>
 <body>
-    <a-scene background="color: #000">
+    <a-scene device-orientation-permission-ui="enabled: false" background="color: #000">
         <a-box position="-1 0.5 -3" rotation="0 45 0" color="#FF5319" shadow></a-box>
     </a-scene>
 </body>
