--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" href="images/logo192.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="manifest" href="manifest.json">
-    <title>Basic PWA Example</title>
+    <title>AFrame Application</title>
     <script src="js/index.js"></script>
     <script src="js/aframe.min.js"></script>
 </head>
