--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <a-scene background="color: #000">
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#FF5319" shadow></a-box>
+        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#8B1953" shadow></a-box>
     </a-scene>
 </body>
 </html>
