--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,5 +1,7 @@
 <html lang="en">
 <head>
+    <link rel="manifest" href="manifest.json">
+    <script>if ("serviceWorker" in navigator){navigator.serviceWorker.register("sw.js").then (registration => {console.log("SW registered");console.log(registration);}).catch( error => {console.error("SW registration failed");console.error(error);})}</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
